--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,10 +1,28 @@
-<div class="container">
-  <h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="mt-5 container">
+  <div class="m-5 p-5">
+  <h2>Edit <%= resource.first_name.to_s.humanize %></h2>
 
   <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
     <%= f.error_notification %>
 
     <div class="form-inputs">
+
+      <div class="form-group">
+        <div class="row align-items-center">
+          <div class='col-sm-4'>
+            <% if resource.photo.attached? %>
+            <%= image_tag resource.photo, class: 'avatar-xlarge' %>
+            <% else %>
+            <%= cl_image_tag "avatar_icon.png", class: 'avatar-xlarge' %>
+            <% end %>
+          </div>
+          <div class='col-small-8'>
+            <%= f.input :photo, as: :file %>
+          </div>
+        </div>
+      </div>
+
+
       <%= f.input :email, required: true, autofocus: true %>
 
       <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
@@ -25,7 +43,7 @@
     </div>
 
     <div class="form-actions">
-      <%= f.button :submit, "Update" %>
+      <%= f.button :submit, "Update", class: 'btn btn-gradient' %>
     </div>
   <% end %>
 
@@ -34,4 +52,5 @@
   <p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
   <%= link_to "Back", :back %>
+</div>
 </div>
