--- a/app/views/schedules/_week.html.erb
+++ b/app/views/schedules/_week.html.erb
@@ -5,64 +5,83 @@
 <%= week_calendar(number_of_weeks: 1, attribute: :start_date, events: schedule.events) do |date, events| %>
   <%= date.day %>
 
-    <% events.each do |event| %>
+     <% events.each do |event| %>
       <% schedule_event = ScheduleEvent.find_by event: event, schedule: schedule %>
       <% team_members = [] %>
       <% current_user.team.users.each do |user| %>
-      <% team_members << (@user = user.first_name) if user.unavailable_days.exclude?(event.start_date) %>
-    <% end %>
+      <% team_members << (@user = user.first_name) if user.unavailable_days.map { |ud_hash| ud_hash[:date] }.exclude?(event.start_date) %>
+      <% end %>
 
       <% event.recruits.each do |recruit| %>
 
-      <% case recruit.athlete.grad_year %>
-      <% when 2022 %>
+      <% if recruit.athlete.grad_year == 2022 %>
         <div class="btn-group bg-danger">
         <a href="/events/<%= event.id %>" class="calendar btn-sm list-group-item list-group-item-action list-group-item-danger d-flex justify-content-between" type='button'>
           <%= event.start_time.to_s(:time) %>-<%= recruit.athlete.first_name %>
         </a>
-          <button type="button" class="btn btn-sm dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <div class='d-block text-center'>
+        <div class='dropdown'>
+          <button type="button" class="btn btn-sm dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="dropdownMenuButton">
             <span class="sr-only"></span>
           </button>
-          <div class="dropdown-menu">
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
             <%= render partial: 'shared/assignedform', locals: { schedule_event: schedule_event, team_members: team_members } %>
           </div>
         </div>
-      <% when 2023 %>
+          <p class="coach-assigned"><%= schedule_event.user.first_name if schedule_event.user %></p>
+        </div>
+      </div>
+      <% elsif recruit.athlete.grad_year == 2023 %>
         <div class="btn-group bg-primary">
         <a href="/events/<%= event.id %>" class="calendar btn-sm list-group-item list-group-item-action list-group-item-primary d-flex justify-content-between" type='button'>
           <%= event.start_time.to_s(:time) %>-<%= recruit.athlete.first_name %>
         </a>
-          <button type="button" class="btn btn-sm dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <div class='d-block text-center'>
+        <div class='dropdown'>
+          <button type="button" class="btn btn-sm dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="dropdownMenuButton">
             <span class="sr-only"></span>
           </button>
-          <div class="dropdown-menu">
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
             <%= render partial: 'shared/assignedform', locals: { schedule_event: schedule_event, team_members: team_members } %>
           </div>
         </div>
-      <% when 2024 %>
+          <p class="coach-assigned"><%= schedule_event.user.first_name if schedule_event.user %></p>
+        </div>
+      </div>
+      <% elsif recruit.athlete.grad_year == 2024 %>
         <div class="btn-group bg-info">
         <a href="/events/<%= event.id %>" class="calendar btn-sm list-group-item list-group-item-action list-group-item-info d-flex justify-content-between" type='button'>
           <%= event.start_time.to_s(:time) %>-<%= recruit.athlete.first_name %>
         </a>
-          <button type="button" class="btn btn-sm dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <div class='d-block text-center'>
+        <div class='dropdown'>
+          <button type="button" class="btn btn-sm dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="dropdownMenuButton">
             <span class="sr-only"></span>
           </button>
-          <div class="dropdown-menu">
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
             <%= render partial: 'shared/assignedform', locals: { schedule_event: schedule_event, team_members: team_members } %>
           </div>
         </div>
-      <% when 2025 %>
+          <p class="coach-assigned"><%= schedule_event.user.first_name if schedule_event.user %></p>
+        </div>
+        </div>
+      <% else %>
         <div class="btn-group bg-success">
         <a href="/events/<%= event.id %>" class="calendar btn-sm list-group-item list-group-item-action list-group-item-success d-flex justify-content-between" type='button'>
           <%= event.start_time.to_s(:time) %>-<%= recruit.athlete.first_name %>
         </a>
-          <button type="button" class="btn btn-sm dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <div class='d-block text-center'>
+        <div class='dropdown'>
+          <button type="button" class="btn btn-sm dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="dropdownMenuButton">
             <span class="sr-only"></span>
           </button>
-          <div class="dropdown-menu">
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
             <%= render partial: 'shared/assignedform', locals: { schedule_event: schedule_event, team_members: team_members } %>
           </div>
         </div>
+          <p class="coach-assigned"><%= schedule_event.user.first_name if schedule_event.user %></p>
+        </div>
+      </div>
       <% end %>
     <% end %>
     <% end %>
